--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,19 @@ body {
     margin: 0px;
     padding: 0px;
 }
+
+.my-grid-cols-10 {
+    grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+
+.my-grid-cols-15 {
+    grid-template-columns: repeat(15, minmax(0, 1fr));
+}
+
+.my-grid-cols-20 {
+    grid-template-columns: repeat(20, minmax(0, 1fr));
+}
+
+.my-grid-cols-25 {
+    grid-template-columns: repeat(25, minmax(0, 1fr));
+}
