--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@ body {
     padding: 0px;
 }
 
+.my-grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
 .my-grid-cols-10 {
     grid-template-columns: repeat(10, minmax(0, 1fr));
 }
